--- a/views/index.jade
+++ b/views/index.jade
@@ -1,15 +1,46 @@
 extends layout
 
+block pageTitle
+    .jumbotron
+        .container
+                h2 Здесь ты сможешь подключить себе VPN на роутер, а следовательно катать в кс и скачивать торренты, не устанавливая никаких программ на компьютер
+                h2 Что для этого нужно сделать:
+
 block pageContent
     .container
         .panel.panel-primary
           .panel-heading
             h3.panel-title 1. Скачайте прошивку OpenWRT на ваш роутер и установите ее
-          .panel-body
-            label Перейдите по ссылке внизу, найдите по названию роутера вашу прошивку OpenWRT
-            br
-            label Убедитесь, что название прошивки заканчивается на '...squashfs-factory.bin'
-            br
-            label Скачайте и установите её на роутер
-            br
-            a.btn.btn-default(href="https://downloads.openwrt.org/attitude_adjustment/12.09/ar71xx/generic/") Скачать прошивку
+          ul.list-group
+            li.list-group-item Перейдите по ссылке внизу, найдите по названию роутера вашу прошивку OpenWRT
+            li.list-group-item Убедитесь, что название прошивки заканчивается на '...squashfs-factory.bin'
+            li.list-group-item Скачайте и установите её на роутер
+            li.list-group-item 
+                a.btn.btn-info.btn-sm(href="https://downloads.openwrt.org/attitude_adjustment/12.09/ar71xx/generic/") Скачать прошивку
+        br
+        .panel.panel-primary
+          .panel-heading
+            h3.panel-title 2. Настройте роутер
+          ul.list-group
+            li.list-group-item Подключитесь к роутеру по lan кабелю и зайдите на адрес http://192.168.1.1
+            li.list-group-item Изначально пароль не стоит, поэтому зайдете в панель администратора и установите его там
+        br
+        .panel.panel-primary
+          .panel-heading
+            h3.panel-title 3. Восстановитесь из backup файла
+          ul.list-group
+            li.list-group-item Скачайте backup файл для OpenWRT
+            li.list-group-item Затем установите его на вашу прошивку
+            li.list-group-item
+                a.btn.btn-info.btn-sm(href="https://downloads.openwrt.org/attitude_adjustment/12.09/ar71xx/generic/") Скачать backup
+        br
+        .panel.panel-primary
+            .panel-heading
+                h3.panel-title 4. Зайдите на роутер
+            ul.list-group
+                li.list-group-item Должна появиться wifi сеть, можете теперь подключиться к ней и не использовать провода
+                li.list-group-item Перейдите во вкладку VPN и посмотрите ваш MAC-адрес устройства
+                li.list-group-item Отошлите его нам и когда мы вам сообщим, можете перегрузить роутер
+                li.list-group-item VPN будет работать!
+                li.list-group-item
+                    a.btn.btn-info.btn-sm(href="/pay") Заплатить за месяц
