--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,23 +1,28 @@
 doctype html
 html
   head
-    title= title
+    title VPN
 
     //indicate that our site is mobile optimized
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
-    //reference our site-specific css
-    //link(rel='stylesheet', href='/stylesheets/style.css')
-
+    script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
-    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.min.css')
-    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
+    //link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.min.css')
+    //link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet', href='http://bootswatch.com/flatly/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/style.css')
+
   body
-    
-    .jumbotron
-        .container
-                h1 VPN Трилистник
-                h2 Здесь ты сможешь подключить себе VPN на роутер, а следовательно катать в кс и скачивать торренты
+    .header
+        a(href="/")
+            h1.page-title VPN Трилистник
+
+    block pageTitle
 
     block pageContent
+    
+    .footer
+        .container
+            p По всем вопросам обращаться сюда
