--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
 .header .page-title{
     margin: 0;
     font-weight: 200;
-    font-size: 80px;
+    font-size: 8vw;
     text-align: center;
     padding: 100px;
     text-transform: uppercase;
