--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,11 @@ html
     .header
         a(href="/")
             h1.page-title VPN Трилистник
+            
+    nav.navbar.navbar-default
+        ul.nav.navbar-nav
+          li: a(href='/') Главная
+          li: a(href='/pay') Оплата
 
     block pageTitle
 
@@ -27,4 +32,5 @@ html
     
     .footer
         .container
-            p По всем вопросам обращаться сюда
+            p По всем вопросам обращаться 
+                a(href="//vk.com/mrkravtsov") сюда
